adding courses and bugfixes
